--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,16 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<java.version>1.6</java.version>
-		<slf4j.version>1.7.7</slf4j.version>
-		<guava.version>17.0</guava.version>
-		<http-clent.version>1.18.0-rc</http-clent.version>
-		<jackson2.version>2.4.1</jackson2.version>
-		<junit.version>4.11</junit.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<slf4j.version>1.7.30</slf4j.version>
+		<guava.version>[24.1.1,)</guava.version>
+		<http-clent.version>1.35.0</http-clent.version>
+		<jackson.version>2.11.0</jackson.version>
+		<junit.version>4.13</junit.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>com.google.http-client</groupId>
 			<artifactId>google-http-client-jackson2</artifactId>
@@ -34,12 +30,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>${jackson2.version}</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>${jackson2.version}</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<!-- Logging -->
 		<dependency>
@@ -57,18 +53,4 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-		</plugins>
-
-	</build>
 </project>
